docs(dev): aligner la doc dev avec CONTRIBUTING/TESTING + liens croisés
Vérifie que tout CONTRIBUTING.md / TESTING.md est couvert par la doc dev et
ajoute les manques :
- tests-et-qualite : mutation PIT (-Pmutation), seuils JaCoCo exacts (85 % lignes
  / 70 % branches, outils/ exclus), sélection -Dtest=Classe#methode, ApprovalTests,
  les 2 pièges (endsWith canonicalise, mutation hors fil FX), config headless complète ;
- ajouter-une-fonctionnalite : emplacement des .fxml/.css (src/main/java, pas
  resources) + section « Conventions de code et de commit » (///, noms FR, pas de
  tiret cadratin, Conventional Commits) ;
- ci-cd-release : section Dépendances (Dependabot, JavaFX exclu).

Liens depuis les fichiers repo-root vers la doc dev (versions approfondies) :
CONTRIBUTING (intro + §2 architecture + §5 CI) et TESTING (intro). Corrige une
incohérence : installeur macOS .dmg = Apple Silicon uniquement (Intel retiré de
release.yml).